# big-satellite-lab

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: info.txt
assets/models/cube/: cube.blend  cube.blend1  info.txt
assets/models/earth/: earth.blend1  earth.mtl  info.txt
assets/models/moon/: moon.blend  moon.mtl
assets/models/sat01/: sat01.blend  sat01.blend1  sat01.mtl
assets/models/sun/: sun.blend  sun.blend1  sun.mtl
shaders/: _load_materials.txt  emit_equirect_uv.frag  emit_equirect_uv.frag.spv  pbr_equirect_uv.frag  pbr_equirect_uv.frag.spv  pbr_equirect_uv.vert  pbr_equirect_uv.vert.spv
src/: CMakeLists.txt  big_sat_lab.cpp  big_sat_lab.h  main.cpp
